submit button correctly aligned with form

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     font-weight: 600;
     font-size: 1.2rem;
     letter-spacing: 1px;
-
+    padding-right: 7vw; 
 }
 
 .label-font {
@@ -22,6 +22,7 @@
     font-size: 1rem;
     font-weight: 400;
     letter-spacing: -1px;
+    padding-left: 2vw;
 }
 
 .subtitle-font {
@@ -74,17 +75,17 @@
 }
 
 .header {
-    margin-top: 10vh;
+    margin-top: 4vh;
     padding: 2vw;
 }
 
-.form-block {
+.form-card {
     padding: 2vw; 
     background-color: white;
     box-shadow: 0px 5px 10px -2px rgb(158, 158, 158);
 }
 
-form {
+.form-block {
     display: flex; 
     flex-direction: row;
     flex-wrap: wrap; 
@@ -96,11 +97,12 @@ form {
     padding-right: 3vw; 
     padding-bottom: 1vw; 
     width: 25vw;
-    line-height: 2vh;
 }
 
 input {
     border-radius: 4px; 
+    border-color: #E5E7EB;
+    line-height: 2.5vh;
 }
 
 input:focus {
@@ -135,6 +137,10 @@ a:link, a:hover a:active a:visited {
     #content {
         display: flex;
         flex-direction: column;
+    }
+
+    .main-font {
+        padding-right: 0vh; 
     }
 
     .left-picture {
